done with our product section responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hide-x-scrollbar::-webkit-scrollbar {
+    display: none; /* Hide scrollbar in WebKit browsers */
+}
