fixed some ui and responsive bugs

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,6 @@
 .hide-x-scrollbar::-webkit-scrollbar {
     display: none; /* Hide scrollbar in WebKit browsers */
 }
+body {
+    background-color: ;
+}
