--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,16 @@
 html {
     margin: 0;
     padding: 0;
+    /* overflow-x: hidden; */
+    /* width: 100vw; */
 }
 
 .hide-x-scrollbar::-webkit-scrollbar {
     display: none; /* Hide scrollbar in WebKit browsers */
 }
 body {
-    /* background: black; */
-    width: 100vw;
-    overflow-x: hidden;
+    background: black;
+    /* width: 100vw; */
     margin: 0;
     padding: 0;
 }
