--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,16 @@
 html {
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
-    /* width: 100vw; */
+    max-width: 100vw;
 }
 
 .hide-x-scrollbar::-webkit-scrollbar {
     display: none; /* Hide scrollbar in WebKit browsers */
 }
 body {
+    overflow-x: hidden;
     background: black;
-    /* width: 100vw; */
+    width: 100%;
     margin: 0;
     padding: 0;
 }
